added style to checkbox

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="wrapper">
       <div class="table-wrapper">
+        <!--First table-->
       <table class="file-table">
         <tr class="table-head">
           <th>Name</th>
@@ -83,66 +84,172 @@
             </td>
         </tr>
       </table>
-      <!--<table class="file-table">
+      <!--Second table-->
+      <table class="file-table table-checkbox">
           <tr class="table-head">
-            <th>Name</th>
-            <th collspan="2">Date</th>
+            <th>
+              <label>
+                <input type="checkbox" name="checkbox-file">
+                Name 
+              </label>
+            </th>
+            <th colspan="2">Date</th>
           </tr>
           <tr>
               <td>
-                <label>
-                  <input type="checkbox">
-                File.pdf
+                  <input type="checkbox" name="checkbox-file-1" id="checkbox-file-1">
+                <label for="checkbox-file-1">
+                  File.pdf
                 </label>
               </td>
               <td>3 mins ago</td>
-              <td>...</td>
+              <td>
+                  <ul class="dropdown-menu">
+                      <li class="dropdown-menu-item">
+                        <a>...</a>
+                        <ul class="dropdown-submenu">
+                          <li class="dropdown-menu-item">
+                            <button type="button">Edit</button>
+                          </li>
+                          <li class="dropdown-menu-item">
+                            <button type="button">Remove</button>
+                          </li>
+                          <li class="dropdown-menu-item">
+                            <button type="button">Delete</button>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+              </td>
           </tr>
           <tr>
-              <td> 
-                <label>
-                  <input type="checkbox">
-                File.pdf
-                </label>
-              </td>
+              <td>
+                  <input type="checkbox" name="checkbox-file-2" id="checkbox-file-2">
+                  <label for="checkbox-file-2">
+                    File.pdf
+                  </label>
+                </td>
               <td>Yesterday</td>
-              <td>...</td>
+              <td>
+                  <ul class="dropdown-menu">
+                      <li class="dropdown-menu-item">
+                        <a>...</a>
+                        <ul class="dropdown-submenu">
+                          <li class="dropdown-menu-item">
+                            <button type="button">Edit</button>
+                          </li>
+                          <li class="dropdown-menu-item">
+                            <button type="button">Remove</button>
+                          </li>
+                          <li class="dropdown-menu-item">
+                            <button type="button">Delete</button>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+              </td>
           </tr>
-          <tr> 
-            <td>
-              <label>
-                <input type="checkbox">
-            File.pdf
-              </label>
-            </td>
+          <tr>
+              <td>
+                  <input type="checkbox" name="checkbox-file-3" id="checkbox-file-3">
+                  <label for="checkbox-file-3">
+                    File.pdf
+                  </label>
+                </td>
               <td>June 1st, 2019</td>
-              <td>...</td>
+              <td>
+                  <ul class="dropdown-menu">
+                      <li class="dropdown-menu-item">
+                        <a>...</a>
+                        <ul class="dropdown-submenu">
+                          <li class="dropdown-menu-item">
+                            <button type="button">Edit</button>
+                          </li>
+                          <li class="dropdown-menu-item">
+                            <button type="button">Remove</button>
+                          </li>
+                          <li class="dropdown-menu-item">
+                            <button type="button">Delete</button>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+              </td>
           </tr>
         </table>
+        <!--Third table-->
         <table class="file-table">
             <tr class="table-head">
               <th>Name</th>
-              <th>Date</th>
-              <th>
-                <input type="search">
-              </th>
+              <th colspan="2">Date</th>
             </tr>
             <tr>
                 <td>File.pdf</td>
                 <td>3 mins ago</td>
-                <td>...</td>
+                <td>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-menu-item">
+                          <a>...</a>
+                          <ul class="dropdown-submenu">
+                            <li class="dropdown-menu-item">
+                              <button type="button">Edit</button>
+                            </li>
+                            <li class="dropdown-menu-item">
+                              <button type="button">Remove</button>
+                            </li>
+                            <li class="dropdown-menu-item">
+                              <button type="button">Delete</button>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                </td>
             </tr>
             <tr>
                 <td>File.pdf</td>
                 <td>Yesterday</td>
-                <td>...</td>
+                <td>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-menu-item">
+                          <a>...</a>
+                          <ul class="dropdown-submenu">
+                            <li class="dropdown-menu-item">
+                              <button type="button">Edit</button>
+                            </li>
+                            <li class="dropdown-menu-item">
+                              <button type="button">Remove</button>
+                            </li>
+                            <li class="dropdown-menu-item">
+                              <button type="button">Delete</button>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                </td>
             </tr>
             <tr>
                 <td>File.pdf</td>
                 <td>June 1st, 2019</td>
-                <td>...</td>
+                <td>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-menu-item">
+                          <a>...</a>
+                          <ul class="dropdown-submenu">
+                            <li class="dropdown-menu-item">
+                              <button type="button">Edit</button>
+                            </li>
+                            <li class="dropdown-menu-item">
+                              <button type="button">Remove</button>
+                            </li>
+                            <li class="dropdown-menu-item">
+                              <button type="button">Delete</button>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                </td>
             </tr>
-          </table> -->
+          </table>
         </div>
     </div>
   </body>
