--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Second</title>
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
+    
   </head>
 
   <body>
@@ -19,8 +20,8 @@
         </tr>
         <tr>
             <td>File.pdf</td>
-            <td>3 mins ago</td>
-            <td>
+            <td class="column">3 mins ago</td>
+            <td class="column">
                 <ul class="dropdown-menu">
                     <li class="dropdown-menu-item">
                       <a>...</a>
@@ -41,8 +42,8 @@
         </tr>
         <tr>
             <td>File.pdf</td>
-            <td>Yesterday</td>
-            <td>
+            <td class="column">Yesterday</td>
+            <td class="column">
                 <ul class="dropdown-menu">
                     <li class="dropdown-menu-item">
                       <a>...</a>
@@ -63,8 +64,8 @@
         </tr>
         <tr>
             <td>File.pdf</td>
-            <td>June 1st, 2019</td>
-            <td>
+            <td class="column">June 1st, 2019</td>
+            <td class="column">
                 <ul class="dropdown-menu">
                     <li class="dropdown-menu-item">
                       <a>...</a>
@@ -87,11 +88,8 @@
       <!--Second table-->
       <table class="file-table table-checkbox">
           <tr class="table-head">
-            <th>
-              <label>
-                <input type="checkbox" name="checkbox-file">
+            <th class="table-head-name">
                 Name 
-              </label>
             </th>
             <th colspan="2">Date</th>
           </tr>
@@ -102,8 +100,8 @@
                   File.pdf
                 </label>
               </td>
-              <td>3 mins ago</td>
-              <td>
+              <td class="column">3 mins ago</td>
+              <td class="column">
                   <ul class="dropdown-menu">
                       <li class="dropdown-menu-item">
                         <a>...</a>
@@ -129,8 +127,8 @@
                     File.pdf
                   </label>
                 </td>
-              <td>Yesterday</td>
-              <td>
+              <td class="column">Yesterday</td>
+              <td class="column">
                   <ul class="dropdown-menu">
                       <li class="dropdown-menu-item">
                         <a>...</a>
@@ -156,8 +154,8 @@
                     File.pdf
                   </label>
                 </td>
-              <td>June 1st, 2019</td>
-              <td>
+              <td >June 1st, 2019</td>
+              <td >
                   <ul class="dropdown-menu">
                       <li class="dropdown-menu-item">
                         <a>...</a>
@@ -178,15 +176,96 @@
           </tr>
         </table>
         <!--Third table-->
-        <table class="file-table">
+        <table class="file-table search">
             <tr class="table-head">
               <th>Name</th>
-              <th colspan="2">Date</th>
+              <th class="column">Date</th>
+              <th class="serch-form column">
+                <label>
+                    <svg class="search-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="16px" height="16px" viewBox="0 0 310.42 310.42" style="enable-background:new 0 0 310.42 310.42;"
+                    xml:space="preserve">
+                 <g>
+                   <g>
+                     <path d="M273.587,214.965c49.11-49.111,49.109-129.021,0-178.132c-49.111-49.111-129.02-49.111-178.13,0
+                       C53.793,78.497,47.483,140.462,76.51,188.85c0,0,2.085,3.498-0.731,6.312c-16.065,16.064-64.263,64.263-64.263,64.263
+                       c-12.791,12.79-15.836,30.675-4.493,42.02l1.953,1.951c11.343,11.345,29.229,8.301,42.019-4.49c0,0,48.096-48.097,64.128-64.128
+                       c2.951-2.951,6.448-0.866,6.448-0.866C169.958,262.938,231.923,256.629,273.587,214.965z M118.711,191.71
+                       c-36.288-36.288-36.287-95.332,0.001-131.62c36.288-36.287,95.332-36.288,131.619,0c36.288,36.287,36.288,95.332,0,131.62
+                       C214.043,227.996,155,227.996,118.711,191.71z"/>
+                     <g>
+                       <path d="M126.75,118.424c-1.689,0-3.406-0.332-5.061-1.031c-6.611-2.798-9.704-10.426-6.906-17.038
+                         c17.586-41.559,65.703-61.062,107.261-43.476c6.611,2.798,9.704,10.426,6.906,17.038c-2.799,6.612-10.425,9.703-17.039,6.906
+                         c-28.354-11.998-61.186,1.309-73.183,29.663C136.629,115.445,131.815,118.424,126.75,118.424z"/>
+                     </g>
+                   </g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 <g>
+                 </g>
+                 </svg>
+                 
+                <input type="search" name="search-input" placeholder="Search" id="#">
+              </label>
+              </th>
             </tr>
             <tr>
-                <td>File.pdf</td>
-                <td>3 mins ago</td>
                 <td>
+                    <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 595.28 595.28" style="enable-background:new 0 0 595.28 595.28;" xml:space="preserve">
+                 <style type="text/css">
+                   .st0{fill:#00A9FF;}
+                   .st1{fill:none;stroke:#00A9FF;stroke-width:42;stroke-miterlimit:10;}
+                 </style>
+                 <g>
+                   <path class="st0" d="M502,246v225H94V246H502 M524.86,204H71.14C60.57,204,52,212.57,52,223.14v270.71
+                     C52,504.43,60.57,513,71.14,513h453.71c10.57,0,19.14-8.57,19.14-19.14V223.14C544,212.57,535.43,204,524.86,204L524.86,204z"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="195.05" y1="284" x2="195.05" y2="390"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="400.38" y1="283" x2="400.38" y2="390"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="188" y1="369" x2="409" y2="369"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="135" y1="104" x2="461" y2="104"/>
+                 </g>
+                 <line class="st1" x1="75" y1="223" x2="152" y2="94"/>
+                 <line class="st1" x1="525" y1="229" x2="444" y2="95"/>
+                 </svg>
+                  File.pdf</td>
+                <td class="column">3 mins ago</td>
+                <td class="column">
                     <ul class="dropdown-menu">
                         <li class="dropdown-menu-item">
                           <a>...</a>
@@ -206,9 +285,35 @@
                 </td>
             </tr>
             <tr>
-                <td>File.pdf</td>
-                <td>Yesterday</td>
                 <td>
+                    <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 595.28 595.28" style="enable-background:new 0 0 595.28 595.28;" xml:space="preserve">
+                 <style type="text/css">
+                   .st0{fill:#00A9FF;}
+                   .st1{fill:none;stroke:#00A9FF;stroke-width:42;stroke-miterlimit:10;}
+                 </style>
+                 <g>
+                   <path class="st0" d="M502,246v225H94V246H502 M524.86,204H71.14C60.57,204,52,212.57,52,223.14v270.71
+                     C52,504.43,60.57,513,71.14,513h453.71c10.57,0,19.14-8.57,19.14-19.14V223.14C544,212.57,535.43,204,524.86,204L524.86,204z"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="195.05" y1="284" x2="195.05" y2="390"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="400.38" y1="283" x2="400.38" y2="390"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="188" y1="369" x2="409" y2="369"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="135" y1="104" x2="461" y2="104"/>
+                 </g>
+                 <line class="st1" x1="75" y1="223" x2="152" y2="94"/>
+                 <line class="st1" x1="525" y1="229" x2="444" y2="95"/>
+                 </svg>
+                 File.pdf</td>
+                <td class="column">Yesterday</td>
+                <td class="column">
                     <ul class="dropdown-menu">
                         <li class="dropdown-menu-item">
                           <a>...</a>
@@ -228,9 +333,35 @@
                 </td>
             </tr>
             <tr>
-                <td>File.pdf</td>
-                <td>June 1st, 2019</td>
                 <td>
+                    <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 595.28 595.28" style="enable-background:new 0 0 595.28 595.28;" xml:space="preserve">
+                 <style type="text/css">
+                   .st0{fill:#00A9FF;}
+                   .st1{fill:none;stroke:#00A9FF;stroke-width:42;stroke-miterlimit:10;}
+                 </style>
+                 <g>
+                   <path class="st0" d="M502,246v225H94V246H502 M524.86,204H71.14C60.57,204,52,212.57,52,223.14v270.71
+                     C52,504.43,60.57,513,71.14,513h453.71c10.57,0,19.14-8.57,19.14-19.14V223.14C544,212.57,535.43,204,524.86,204L524.86,204z"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="195.05" y1="284" x2="195.05" y2="390"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="400.38" y1="283" x2="400.38" y2="390"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="188" y1="369" x2="409" y2="369"/>
+                 </g>
+                 <g>
+                   <line class="st1" x1="135" y1="104" x2="461" y2="104"/>
+                 </g>
+                 <line class="st1" x1="75" y1="223" x2="152" y2="94"/>
+                 <line class="st1" x1="525" y1="229" x2="444" y2="95"/>
+                 </svg>
+                  File.pdf</td>
+                <td class="column">June 1st, 2019</td>
+                <td class="column">
                     <ul class="dropdown-menu">
                         <li class="dropdown-menu-item">
                           <a>...</a>
